--- a/sketchbook/index.html
+++ b/sketchbook/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Nathan > Sketchbook</title>
+    <title>Nathan's Sketchbook</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/x-icon" href="/assets/icons/sketchbook.gif">
 </head>
 <body>
-    <a href="https://nathannn.com" class="link-block">
+    <a href="/" class="link-block">
         <div class="link-text">nathannn.com</div>
         <div class="link-arrow">></div>
         <div class="link-description">sketchbook</div>
