--- a/toolkit/index.html
+++ b/toolkit/index.html
@@ -3,10 +3,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/assets/icons/tool.gif" type="image/x-icon">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Meet with Nathan</title>
+    <title>Nathan's Creative Toolkit</title>
     <style>
       html, body {
         margin: 0;
