+toolkit breadcrumb ~syntax

--- a/sketchbook/index.html
+++ b/sketchbook/index.html
@@ -7,10 +7,10 @@
     <link rel="icon" type="image/x-icon" href="/assets/icons/sketchbook.gif">
 </head>
 <body>
-    <a href="/" class="link-block">
-        <div class="link-text">nathannn.com</div>
-        <div class="link-arrow">></div>
-        <div class="link-description">sketchbook</div>
+    <a href="/" class="breadcrumb-link-block">
+        <div class="breadcrumb-link-text">nathannn.com</div>
+        <div class="breadcrumb-link-arrow">></div>
+        <div class="breadcrumb-link-description">sketchbook</div>
       </a>
       
     <script src="script.js"></script>
