--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
+⚠️ nathannn.com is under construction
 <ul>
+    <li><a href="work/">work</a></li> 
     <li><a href="sketchbook/">sketchbook</a></li>
     <li><a href="toolkit/">toolkit</a></li>
     <li><a href="meet/">meet</a></li>
