--- a/index.html
+++ b/index.html
@@ -3,10 +3,27 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Nathan Nadler-Nir Portfolio</title>
-  <meta name="description" content="Nathan Nadler-Nir - Creative technician and thing-maker portfolio">
+  <title>Nathan Nadler-Nir | Creative Technologist & Digital Artist</title>
+  <meta name="description" content="Portfolio of Nathan Nadler-Nir - Creative technologist specializing in web development, digital art, filmmaking, and multimedia projects. Explore my work in web design, video production, and interactive experiences.">
+  <meta name="keywords" content="Nathan Nadler-Nir, creative technician, web developer, digital artist, filmmaker, portfolio">
+  <meta name="author" content="Nathan Nadler-Nir">
+  
+  <!-- Open Graph / Social Media Meta Tags -->
+  <meta property="og:title" content="Nathan Nadler-Nir | Creative Technologist & Digital Artist">
+  <meta property="og:description" content="Portfolio of Nathan Nadler-Nir - Creative technologist specializing in web development, digital art, filmmaking, and multimedia projects.">
+  <meta property="og:image" content="/assets/jpg/profile-40.jpg">
+  <meta property="og:url" content="https://nathannn.com">
+  <meta property="og:type" content="website">
+  
+  <!-- Twitter Card Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Nathan Nadler-Nir | Creative Technologist & Digital Artist">
+  <meta name="twitter:description" content="Portfolio of Nathan Nadler-Nir - Creative technologist specializing in web development, digital art, and filmmaking">
+  <meta name="twitter:image" content="/assets/jpg/profile-40.jpg">
+  
+  <link rel="canonical" href="https://nathannn.com">
   <link rel="stylesheet" href="/styles.css">
-  <link rel="favicon" type="image/x-icon" href="/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="/favicon.ico">
   <script src="/theme.js" defer></script>
 </head>
 <body class="home">
@@ -150,6 +167,36 @@
       element.src = '/assets/icons/mailbox.gif';
     }
   }
+  </script>
+
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Nathan Nadler-Nir",
+      "jobTitle": "Creative Technologist",
+      "url": "https://nathannn.com",
+      "image": "https://nathannn.com/assets/jpg/profile-40.jpg",
+      "sameAs": [
+        "https://www.instagram.com/nathannadlernir",
+        "https://www.linkedin.com/in/natenoged/",
+        "https://www.youtube.com/@Natenoged",
+        "https://substack.com/@natenoged"
+      ],
+      "description": "Creative technologist specializing in web development, digital art, and multimedia projects",
+      "knowsAbout": [
+        "Web Development",
+        "Digital Art",
+        "Film Production",
+        "Interactive Media",
+        "Creative Technology"
+      ],
+     
+      "alumniOf": {
+        "@type": "CollegeOrUniversity",
+        "name": "[University of Cape Town]"
+      }
+    }
   </script>
 </body>
 </html>
