--- a/index.html
+++ b/index.html
@@ -4,22 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Nathan Nadler-Nir | Creative Technologist & Digital Artist</title>
-  <meta name="description" content="Portfolio of Nathan Nadler-Nir - Creative technologist specializing in web development, digital art, filmmaking, and multimedia projects. Explore my work in web design, video production, and interactive experiences.">
-  <meta name="keywords" content="Nathan Nadler-Nir, creative technician, web developer, digital artist, filmmaker, portfolio">
-  <meta name="author" content="Nathan Nadler-Nir">
+  <meta name="description" content="Portfolio of Nathan Nadler-Nir - Creative technologist specializing in web development, digital art, filmmaking, and multimedia projects.">
   
-  <!-- Open Graph / Social Media Meta Tags -->
+  <!-- Essential Open Graph Tags -->
   <meta property="og:title" content="Nathan Nadler-Nir | Creative Technologist & Digital Artist">
   <meta property="og:description" content="Portfolio of Nathan Nadler-Nir - Creative technologist specializing in web development, digital art, filmmaking, and multimedia projects.">
-  <meta property="og:image" content="/assets/jpg/profile-40.jpg">
+  <meta property="og:image" content="https://nathannn.com/assets/jpg/profile-40.jpg">
   <meta property="og:url" content="https://nathannn.com">
-  <meta property="og:type" content="website">
-  
-  <!-- Twitter Card Meta Tags -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Nathan Nadler-Nir | Creative Technologist & Digital Artist">
-  <meta name="twitter:description" content="Portfolio of Nathan Nadler-Nir - Creative technologist specializing in web development, digital art, and filmmaking">
-  <meta name="twitter:image" content="/assets/jpg/profile-40.jpg">
   
   <link rel="canonical" href="https://nathannn.com">
   <link rel="stylesheet" href="/styles.css">
@@ -36,10 +27,9 @@
         <img src="/assets/icons/moon.gif" alt="Moon icon" width="20" height="20">
       </button>
     </header>
-    
-  <!-- Profile Card -->
+      <!-- Profile Card -->
   <div class="profile-card">
-  <img class="profile-image" src="/assets/jpg/profile-40.jpg" alt="Profile Photo">
+  <img class="profile-image" src="/assets/jpg/profile-40.jpg" alt="Nathan">
   <div class="profile-info">
     Hi, I'm Nathan Nadler-Nir,<br>a creative technician & thing-maker
   </div>
@@ -184,17 +174,28 @@
         "https://substack.com/@natenoged"
       ],
       "description": "Creative technologist specializing in web development, digital art, and multimedia projects",
-      "knowsAbout": [
-        "Web Development",
-        "Digital Art",
-        "Film Production",
-        "Interactive Media",
-        "Creative Technology"
-      ],
-     
+      "hasOccupation": {
+        "@type": "Occupation",
+        "name": "Creative Technologist",
+        "occupationCategory": "Creative Technology",
+        "skills": [
+          "Web Development",
+          "Digital Art",
+          "Film Production",
+          "Interactive Media"
+        ]
+      },
+      "workLocation": {
+        "@type": "PostalAddress",
+        "addressCountry": "South Africa"
+      },
       "alumniOf": {
         "@type": "CollegeOrUniversity",
-        "name": "[University of Cape Town]"
+        "name": "University of Cape Town"
+      },
+      "mainEntityOfPage": {
+        "@type": "WebPage",
+        "@id": "https://nathannn.com"
       }
     }
   </script>
