-fix schema rich structure

--- a/index.html
+++ b/index.html
@@ -181,21 +181,29 @@
         "https://www.youtube.com/@Natenoged",
         "https://substack.com/@natenoged"
       ],
-      "description": "Creative technologist specializing in web development, digital art, and multimedia projects",
-      "hasOccupation": {
+      "description": "Creative technologist specializing in web development, digital art, and multimedia projects",      "hasOccupation": {
         "@type": "Occupation",
         "name": "Creative Technologist",
         "occupationCategory": "Creative Technology",
+        "estimatedSalary": {
+          "@type": "MonetaryAmount",
+          "value": "0",
+          "currency": "USD"
+        },
+        "occupationLocation": {
+          "@type": "Place",
+          "address": {
+            "@type": "PostalAddress",
+            "addressCountry": "South Africa"
+          }
+        },
         "skills": [
           "Web Development",
           "Digital Art",
           "Film Production",
           "Interactive Media"
-        ]
-      },
-      "workLocation": {
-        "@type": "PostalAddress",
-        "addressCountry": "South Africa"
+        ],
+        "description": "Creative technologist specializing in web development, digital art, and multimedia experiences"
       },
       "alumniOf": {
         "@type": "CollegeOrUniversity",
