-change website title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Nathan Nadler-Nir | Creative Technologist & Digital Artist</title>
+  <title>Nathan Nadler-Nir's Portfolio</title>
   <meta name="description" content="Nathan Nadler-Nir - Creative technologist based in South Africa, specializing in web development, digital art and multimedia experiences.">
   
   <!-- Essential Open Graph Tags -->
@@ -68,17 +68,17 @@
   </div> 
   
   <a href="toolkit/" class="nav-item">
-    <img class="icon" src="\assets\icons\tool.gif" alt="Film icon">
+    <img class="icon" src="/assets/icons/tool.gif" alt="Film icon">
     <span class="nav-link">Toolkit</span>
   </a>
 
   <a href="about/" class="nav-item">
-    <img class="icon" src="\assets\icons\question-mark.gif" alt="About icon">
+    <img class="icon" src="/assets/icons/question-mark.gif" alt="About icon">
     <span class="nav-link">About</span>
   </a>
   
   <a href="contact/" class="nav-item">
-    <img class="icon" src="\assets\icons\hand-right.gif" alt="Contact icon">
+    <img class="icon" src="/assets/icons/hand-right.gif" alt="Contact icon">
     <span class="nav-link">Contact</span>
   </a>
 </nav>
