--- a/index.html
+++ b/index.html
@@ -110,11 +110,11 @@
 
           <div class="form-line">
             <label>Signed,</label>
-            <input type="email" name="email" placeholder="Your email address" required>
+            <input type="email" name="_replyto" placeholder="Your email address" required>
           </div>
         </div>
 
-        <button type="submit" class="submit-button">
+        <button type="submit" name="submit" class="submit-button">
           Get in touch
         </button>
       </form>
