-fixed breadcrumbs, added about page

--- a/index.html
+++ b/index.html
@@ -77,11 +77,12 @@
     <span class="nav-link">About</span>
   </a>
   
-  <a href="contact/" class="nav-item">
+  <!--<a href="contact/" class="nav-item">
     <img class="icon" src="/assets/icons/hand-right.gif" alt="Contact icon">
     <span class="nav-link">Contact</span>
   </a>
-</nav>
+-->
+  </nav>
 
       <!--Contact-->
       <div class="contact-section">
