+buymeacoffee, mono header

--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
       <a href="https://www.linkedin.com/in/natenoged/" target="_blank" rel="noopener">Linkedin</a>
       <a href="https://www.youtube.com/@Natenoged" target="_blank" rel="noopener">YouTube</a>
       <a href="https://substack.com/@natenoged" target="_blank" rel="noopener">Substack</a>
+      <a href="https://buymeacoffee.com/natenoged" target="_blank" rel="noopener">💗 Buy me a coffee</a>
     </div>
   </div>
 
@@ -179,10 +180,6 @@
         "@type": "Occupation",
         "name": "Creative Technologist",
         "occupationCategory": "Creative Technology",
-        "estimatedSalary": {
-          "@type": "MonetaryAmount",
-          "value": "0",
-          "currency": "USD"
         },
         "occupationLocation": {
           "@type": "Place",
