+ Writing, Substack link

--- a/index.html
+++ b/index.html
@@ -72,6 +72,11 @@
     <span class="nav-link">Toolkit</span>
   </a>
 
+  <a href="https://couchroom.substack.com/" class="nav-item">
+    <img class="icon" src="/assets/icons/clip.gif" alt="Writing icon">
+    <span class="nav-link">Writing</span>
+  </a>
+
   <a href="about/" class="nav-item">
     <img class="icon" src="/assets/icons/question-mark.gif" alt="About icon">
     <span class="nav-link">About</span>
