-service value fix

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <div class="dropdown">
               <select name="service" class="fs-input">
                 <option value="website">Website</option>
-                <option value="friend">Design</option>
+                <option value="design">Design</option>
                 <option value="video">Video</option>
                 <option value="quote">Quote</option>
                 <option value="meeting">Meeting</option>
