--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
       <a href="https://www.linkedin.com/in/natenoged/" target="_blank" rel="noopener">Linkedin</a>
       <a href="https://www.youtube.com/@Natenoged" target="_blank" rel="noopener">YouTube</a>
       <a href="https://substack.com/@natenoged" target="_blank" rel="noopener">Substack</a>
+      <a href="https://github.com/natenoged" target="_blank" rel="noopener">Github</a>
       <a href="https://buymeacoffee.com/natenoged" target="_blank" rel="noopener">💗 Buy me a coffee</a>
     </div>
   </div>
