--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     </div>
 <img class="chat-emoji" src="/assets/icons/mailbox.gif" alt="Mailbox emoji" onclick="toggleMailbox(this)">
     <div class="social-links">
-      <a href="https://www.instagram.com/nathannadlernir" target="_blank" rel="noopener">Instagram</a>
+      <a href="https://www.instagram.com/nathannadlernir" target="_blank" rel="noopener">Insta</a>
       <a href="https://www.linkedin.com/in/natenoged/" target="_blank" rel="noopener">Linkedin</a>
       <a href="https://www.youtube.com/@Natenoged" target="_blank" rel="noopener">YouTube</a>
       <a href="https://substack.com/@natenoged" target="_blank" rel="noopener">Substack</a>
