~About Page Styling and +content

--- a/about/index.html
+++ b/about/index.html
@@ -16,16 +16,72 @@
     </a>
 
 <div class="about-p">
-<p>⚠️ This page is Under Construction
 <p>Hi, I'm Nathan Nadler-Nir
 <br>a designer, filmmaker, and creative technologist building digital gardens.</p>
 <p>I work across media, from video, illustration and 3D to UX/UI and Web. Whether I'm shaping a brand, producing a documentary, or sketching out a product, I always put people at the center of the process.</p>
-<p>Over the years, I've:
-<br>🎬 Produced mountains of film and video content with companies, collaborators & arts festivals
-<br>🚀 Led the creative strategy of tech startups like Momint and Dado  
-<br>💻 Developed custom web experiences for international clients
-<br>🧠 Specialized in creative execution, story structure, and productivity systems (I love Notion)</p>
-<p>My practice balances highly efficient problem solving with the joy of experimentation, it's grounded in collaboration, fuelled by curiosity, and informed by a lifelong fascination with digital tools.</p>
+<p>Over the years, I have:
+<br>
+<br>🎬 Produced mountains of <a href="https://nathannn.com/work/#video">film & video</a> content with companies, collaborators & arts festivals
+<br>
+<br>🚀 Led the creative strategy of South African tech startups like Momint and Dado  
+<br>
+<br>💻 Developed custom <a href="https://nathannn.com/work/#web">web experiences</a> for international clients
+<br>
+<br>🧠 Specialized in creative execution, story structure, and productivity systems (I 💖 Notion)</p>
+<p>My practice balances creative problem solving with the joy of experimentation, it's grounded in collaboration, fuelled by curiosity, and informed by a lifelong obsession with <a href="https://nathannn.com/toolkit">digital tools</a>.
+<br>
+  <br> Want to collaborate? Mail me: </p>
 </div>
+
+<!--Contact-->
+      <div class="contact-section">
+    <div class="form-block">
+      <form class="contact-form fs-form" action="https://formspree.io/f/xqaqjpej" method="POST">
+        <div class="form-inputs">
+          <div class="form-line fs-field">
+            <label class="fs-label">To:</label>
+            <div class="recipient">
+              <a href="mailto:nathan.nadlernir@gmail.com">nathan.nadlernir@gmail.com</a>
+            </div>
+          </div>
+          
+          <div class="form-line fs-field">
+            <label class="fs-label">I want a</label>
+            <div class="dropdown">
+              <select name="service" class="fs-input">
+                <option value="website">Website</option>
+                <option value="design">Design</option>
+                <option value="video">Video</option>
+                <option value="quote">Quote</option>
+                <option value="meeting">Meeting</option>
+                <option value="friend">Friend</option>
+              </select>
+            </div>
+          </div>
+
+          <div class="form-line fs-field">
+            <label class="fs-label">Signed,</label>
+            <input type="email" name="email" class="fs-input" placeholder="Your email address" required>
+          </div>
+        </div>
+
+        <button type="submit" class="submit-button fs-button">
+          Get in touch
+        </button>
+      </form>
+    </div>
+<img class="chat-emoji" src="/assets/icons/mailbox.gif" alt="Mailbox emoji" onclick="toggleMailbox(this)">
+    <div class="social-links">
+      <a href="https://www.instagram.com/nathannadlernir" target="_blank" rel="noopener">Insta</a>
+      <a href="https://www.linkedin.com/in/natenoged/" target="_blank" rel="noopener">Linkedin</a>
+      <a href="https://www.youtube.com/@Natenoged" target="_blank" rel="noopener">YouTube</a>
+      <a href="https://substack.com/@natenoged" target="_blank" rel="noopener">Substack</a>
+      <a href="https://github.com/natenoged" target="_blank" rel="noopener">Github</a>
+      <a href="https://buymeacoffee.com/natenoged" target="_blank" rel="noopener">💗 Buy me a coffee</a>
+    </div>
+  </div>
+
+  </div>
+
   </body>
 </html>
