+shop gumroad link

--- a/index.html
+++ b/index.html
@@ -66,6 +66,11 @@
       </a>
     </div>
   </div> 
+
+  <a href="https://nathannn.gumroad.com/" class="nav-item">
+    <img class="icon" src="/assets/icons/basket.gif" alt="Film icon">
+    <span class="nav-link">Shop</span>
+  </a>
   
   <a href="toolkit/" class="nav-item">
     <img class="icon" src="/assets/icons/tool.gif" alt="Film icon">
