--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <div class="play-button-icon"></div>
   </div>
 
-  <video id="motionReel" loop muted playsinline style="width: 100%; height: auto; display: block; object-fit: cover; border-radius: 16px;">
+  <video id="motionReel" poster="/assets/motionreel-poster.jpg" loop muted playsinline style="width: 100%; height: auto; display: block; object-fit: cover; border-radius: 16px;">
     <source src="/assets/motionreel.webm" type="video/webm">
   </video>
 </div>
