--- a/index.html
+++ b/index.html
@@ -28,8 +28,13 @@
       <div class="profile-card">
       <img class="profile-image" src="/assets/jpg/profile-40.jpg" alt="Nathan">
       <div class="profile-info">
-        I'm Nathan Nadler-Nir, a creative director building <a href="https://bedroom.digital">Bedroom</a>
+        I'm Nathan Nadler-Nir, a Creative Director from 🇿🇦
       </div>
+      </div>
+      <div class="status">
+        <div class="status-text">
+          🔨 Busy building a <a href="https://bedroom.digital">worker-owned studio</a>
+        </div>
       </div>
 
       <!-- Navigation -->
@@ -172,7 +177,7 @@
     document.addEventListener("DOMContentLoaded", () => {
         // Combined animations
         const fadeElements = document.querySelectorAll(
-            ".chat-emoji, .profile-card, .nav-item, .submenu-content .nav-link-item, .section-title, .window, .form-block, .social-links, .reel-link"
+            ".chat-emoji, .profile-card, .status, .nav-item, .submenu-content .nav-link-item, .section-title, .window, .form-block, .social-links, .reel-link"
         );
         const growElements = document.querySelectorAll(".profile-image, .icon");
 
