--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </div>
       <div class="status">
         <div class="status-text">
-          🔨 busy building a <a href="https://bedroom.digital">worker-owned studio</a>
+          🔨 building a <a href="https://bedroom.digital">worker-owned studio</a>
         </div>
       </div>
 
