~Profile Card +designer

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <div class="profile-card">
       <img class="profile-image" src="/assets/jpg/profile-40.jpg" alt="Nathan">
       <div class="profile-info">
-        I'm Nathan Nadler-Nir, a Creative Director from 🇿🇦
+        I'm Nathan Nadler-Nir, a Designer & Creative Director 🇿🇦
       </div>
       </div>
       <div class="status">
