--- a/work/index.html
+++ b/work/index.html
@@ -9,7 +9,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="/styles.css">
     
-</head>     
+</head> 
+
+<a href="/" class="breadcrumb-link-block">
+      <div class="breadcrumb-link-text">nathannn.com</div>
+      <div class="breadcrumb-link-arrow">></div>
+      <div class="breadcrumb-link-description">work</div>
+    </a>
+
 <body class="work">
     <!--<h1>Portfolio</h1>-->
     <div class="filter-controls" style="visibility: hidden">
