+3d NNN on About page

--- a/about/index.html
+++ b/about/index.html
@@ -26,8 +26,33 @@
     });
   </script>
 
+  <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/4.0.0/model-viewer.min.js"></script>  
+
   </head>
   <body class="about">
+
+<div class="box">
+
+  <model-viewer 
+  id="reveal" 
+  camera-controls 
+  touch-action="pan-y" 
+  style="
+  width: 600px; 
+  height: 600px;
+  max-width: 100%;
+
+  --progress-bar-height: 0px; 
+  --progress-mask: none;"  
+  auto-rotate 
+  disable-zoom 
+  disable-pan 
+  poster="/assets/3D/NNN-poster.webp"
+  src="/assets/3D/NNN.glb" 
+  shadow-intensity="1">
+</model-viewer>
+
+  <div class="blocks-flex">
 
   <a href="/" class="breadcrumb-link-block">
       <div class="breadcrumb-link-text">nathannn.com</div>
@@ -99,6 +124,8 @@ Over the years, I have:
   </div>
 
   </div>
+  </div>
+  
 
   </body>
 </html>
