--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
   <a href="https://nathannn.gumroad.com/" class="nav-item">
     <img class="icon" src="/assets/icons/basket.gif" alt="Film icon">
-    <span class="nav-link">Shop</span>
+    <span class="nav-link">Store</span>
   </a>
   
   <a href="toolkit/" class="nav-item">
