--- a/index.html
+++ b/index.html
@@ -216,48 +216,47 @@
   </script>
 
   <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "Person",
-      "name": "Nathan Nadler-Nir",
-      "jobTitle": "Creative Technologist",
-      "url": "https://nathannn.com",
-      "image": "https://nathannn.com/assets/jpg/profile-40.jpg",
-      "sameAs": [
-        "https://www.instagram.com/nathannadlernir",
-        "https://www.linkedin.com/in/natenoged/",
-        "https://www.youtube.com/@Natenoged",
-        "https://substack.com/@natenoged"
-      ],
-      "description": "Creative technologist specializing in web development, digital art, and multimedia projects",      "hasOccupation": {
-        "@type": "Occupation",
-        "name": "Creative Technologist",
-        "occupationCategory": "Creative Technology",
-        },
-        "occupationLocation": {
-          "@type": "Place",
-          "address": {
-            "@type": "PostalAddress",
-            "addressCountry": "South Africa"
-          }
-        },
-        "skills": [
-          "Web Development",
-          "Digital Art",
-          "Film Production",
-          "Interactive Media"
-        ],
-        "description": "Creative technologist specializing in web development, digital art, and multimedia experiences"
-      },
-      "alumniOf": {
-        "@type": "CollegeOrUniversity",
-        "name": "University of Cape Town"
-      },
-      "mainEntityOfPage": {
-        "@type": "WebPage",
-        "@id": "https://nathannn.com"
-      }
+{
+  "@context": "https://schema.org",
+  "@type": "Person",
+  "name": "Nathan Nadler-Nir",
+  "jobTitle": "Creative Technologist",
+  "url": "https://nathannn.com",
+  "image": "https://nathannn.com/assets/jpg/profile-40.jpg",
+  "sameAs": [
+    "https://www.instagram.com/nathannadlernir",
+    "https://www.linkedin.com/in/natenoged/",
+    "https://www.youtube.com/@Natenoged",
+    "https://substack.com/@natenoged"
+  ],
+  "description": "Creative technologist specializing in web development, digital art, and multimedia experiences",
+  "hasOccupation": {
+    "@type": "Occupation",
+    "name": "Creative Technologist",
+    "occupationCategory": "Creative Technology"
+  },
+  "occupationLocation": {
+    "@type": "Place",
+    "address": {
+      "@type": "PostalAddress",
+      "addressCountry": "South Africa"
     }
-  </script>
+  },
+  "skills": [
+    "Web Development",
+    "Digital Art",
+    "Film Production",
+    "Interactive Media"
+  ],
+  "alumniOf": {
+    "@type": "CollegeOrUniversity",
+    "name": "University of Cape Town"
+  },
+  "mainEntityOfPage": {
+    "@type": "WebPage",
+    "@id": "https://nathannn.com"
+  }
+}
+</script>
 </body>
 </html>
