~about page and modelviewer

--- a/about/index.html
+++ b/about/index.html
@@ -38,12 +38,9 @@
   camera-controls 
   touch-action="pan-y" 
   style="
-  width: 700px; 
-  height: 700px;
-  max-width: 100%;
-
   --progress-bar-height: 0px; 
   --progress-mask: none;"  
+  
   auto-rotate 
   disable-zoom 
   disable-pan 
@@ -62,14 +59,16 @@
 
 <div class="about-p">
 <p>Hi, I'm Nathan Nadler-Nir
-<br>a designer, filmmaker, and creative technologist building digital gardens.</p>
+<br>a designer, filmmaker, and creative technologist building digital gardens.
+Based in Cape Town, South Africa.
+</p>
 <p>I work across media, from video, illustration and 3D to UX/UI and Web. Whether I'm shaping a brand, producing a documentary, or sketching out a product, I always put people at the center of the process.</p>
 Over the years, I have:
 <ul>
 <li>Produced mountains of <a href="/work/#video">video</a> content with companies, collaborators & arts festivals
 <li>Led the creative strategy of South African tech startups like Momint and Dado  
 <li>Developed custom <a href="/work/#web">web experiences</a> for international clients
-<li>Specialized in creative execution, story structure, and productivity systems <br>(I 💖 Notion)</p>
+<li>Specialized in creative execution, story structure, and productivity systems </p>
 </ul>
 <p>My practice balances creative problem solving with the joy of experimentation, it's grounded in collaboration, fuelled by curiosity, and informed by a lifelong obsession with <a href="/toolkit">digital tools</a>.
 <br>
